# r2-web

./: .gitignore  .node-version  CLAUDE.md  bump.config.ts  changelogithub.config.ts  global.d.ts  license  netlify.toml  package.json  plan.md  pnpm-lock.yaml  readme-en.md  readme.md  tsconfig.json  vercel.json  wrangler.jsonc
.github/ISSUE_TEMPLATE/: 01-bug-report.yaml  02-feature-request.yaml  03-general-feedback.yaml
.github/workflows/: release.yaml
scripts/: release.mts
src/: index.html  main.js  manifest.json  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/css/: animations.css  base.css  components.css  layout.css  reset.css  tokens.css  utilities.css
src/js/: app.js  config-manager.js  constants.js  file-explorer.js  file-operations.js  file-preview.js  i18n.js  r2-client.js  transfer-manager.js  ui-manager.js  upload-manager.js  utils.js
